--- a/BTL/BTL.csproj
+++ b/BTL/BTL.csproj
@@ -241,9 +241,11 @@
     <Content Include="Signup.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dao\UserDAO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
